--- a/DOPAgent/ClientApp/src/app/add-client/add-client.component.html
+++ b/DOPAgent/ClientApp/src/app/add-client/add-client.component.html
@@ -11,6 +11,10 @@
 <body>
   <div class="container mt-5">
     <form (submit)="onSubmit()">
+      <div class="form-group" style="display:none">
+       
+        <input type="text" id="Id" [(ngModel)]="Id" name="Id" class="form-control" required>
+      </div>
       <div class="form-group">
         <label for="RDAccNo">RD Account No.:</label>
         <input type="text" id="RDAccNo" [(ngModel)]="RDAccNo" name="RDAccNo" class="form-control" required>
@@ -23,7 +27,7 @@
         <label for="CreatedDate">Created Date:</label>
         <input type="date" id="CreatedDate" [(ngModel)]="CreatedDate" name="CreatedDate" class="form-control" required>
       </div>
-      <button style="margin-top:10px" type="submit" class="btn btn-primary">Save Data</button>
+      <button style="margin-top:10px" type="submit" class="btn btn-primary">{{Id>0 ? 'Update Data' :   'Save Data'}}</button>
     </form>
   </div>
 
