--- a/DOPAgent/ClientApp/src/app/home/home.component.html
+++ b/DOPAgent/ClientApp/src/app/home/home.component.html
@@ -16,6 +16,22 @@
 
     <p>Hello {{Username}} </p>
   </div>
+
+  <div class="image-video-wrp">
+    <figure>
+      <ng-container *ngIf="videodisabled; else videoblock">
+        <img src="./assets/images/video-poster.jpg" class="img-fluid thumblin">
+      </ng-container>
+      <ng-template #videoblock>
+        <iframe width="100" height="100" src="https://www.youtube.com/embed/QYU8zydUqD8?autoplay=1&mute=1&controls=0" allowfullscreen></iframe>
+      </ng-template>
+      <div class="play-icon-box ">
+        <img (click)="changeImg()" [title]="play" [src]="videoIcon" alt="">
+      </div>
+    </figure>
+  </div>
+
+
   <footer>
     &copy; 2023 Department of Post Office Agent
   </footer>
